/*
 * $Id: ChangeLog,v 1.4743 2006/01/12 17:09:53 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-01-14 12:30 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
  * bin/bld.bat
    - gtwinmt.lib - not needed.
  * contrib/gd/source/gdwrp.c
    * changed a cast in retclen call
  * source/rtl/gt.c
    + GT_INFO( iInfo [, lUpdate [, iParam [, cParam ]]] ) -> iStatus
  * source/rtl/gtwin/gtwin.c
    * modified Readkey for following support
  * include/gtinfo.ch
    * #define GTI_KBDSPECIAL 11 /* This will get/set the status of the top row
      shift state handling. Enable to correct a documented keyboard handling bug
      under Win9x.  Enable if the caps-lock key affects the top row keys.
      (Alternate language keys are not handled properly by this temporary fix.
      Default is disabled. */

    + #define GTI_KBDALT     12 /* This will get/set the status of the alt-numpad
      key handling.  
      Default is Enabled. */

2006-01-12 18:10 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/inkey.c
    ! fixed typo in copy and past in my last commit

2006-01-12 14:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapi.h
  * xharbour/source/vm/dynsym.c
    + added new functions: hb_dynsymName(), hb_dynsymMemvarHandle(),
      hb_dynsymAreaHandle(), hb_dynsymSetAreaHandle()

  * xharbour/include/hbapigt.h
    ! fixed default keyboard buffer size - it was reverted,
      should be 15 for CL52 and 50 for CL53

  * xharbour/source/codepage/cpit437.c
  * xharbour/source/codepage/cpit850.c
  * xharbour/source/codepage/cpitiso.c
    * updated to respected translatable letter set,
      Lorenzo, AFAIR you few weeks ago you inform you will do that
  * xharbour/source/rdd/dbcmd.c
  * xharbour/source/rdd/workarea.c